Reformatted MyWorld, Player and Bullet